src/test/ui/issues/issue-49257.stderr
error: expected `}`, found `,`
  --> $DIR/issue-49257.rs:10:19
   |
LL |     let Point { .., y, } = p;
   |                 --^
   |                 | |
   |                 | expected `}`
   |                 `..` must be at the end and cannot have a trailing comma
help: move the `..` to the end of the field list
   |
LL |     let Point { y, .. } = p;
   |                --  ^^^^

error: expected `}`, found `,`
  --> $DIR/issue-49257.rs:11:19
   |
LL |     let Point { .., y } = p;
   |                 --^
   |                 | |
   |                 | expected `}`
   |                 `..` must be at the end and cannot have a trailing comma
help: move the `..` to the end of the field list
   |
LL |     let Point { y , .. } = p;
   |                -- ^^^^^^

error: expected `}`, found `,`
  --> $DIR/issue-49257.rs:12:19
   |
LL |     let Point { .., } = p;
   |                 --^
   |                 | |
   |                 | expected `}`
   |                 | help: remove this comma
   |                 `..` must be at the end and cannot have a trailing comma

error: aborting due to 3 previous errors

